dont run gsh by default, and make sure enough memory
git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk@6748 bc24b658-cf39-4249-b827-e3526eaaeb42